crates/es-fluent-derive/tests/ui/fluent_default_removed.stderr
error: Attribute error in message field: `#[fluent(default)]` is not supported in message field `username`
       help: accepted keys here are skip, selector, optional, arg, and value
 --> tests/ui/fluent_default_removed.rs:5:14
  |
5 |     #[fluent(default)]
  |              ^^^^^^^
